code/apps/msp-manage/base/manage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msp-manage
  namespace: msp
  labels:
    app: msp-manage
spec:
  selector:
    matchLabels:
      app: msp-manage
  template:
    metadata:
      labels:
        app: msp-manage
    spec:
      containers:
      - name: msp-manage
        # image: envds-registry:5000/core/envds-manage:0.1.0
        image: registry-msp:5000/msp/msp-manage:0.1.0
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 9080
          protocol: TCP
