code/apps/msp-manage/base/manage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msp-manage
  namespace: msp
  labels:
    app: msp-manage
spec:
  selector:
    app: msp-manage
  ports:
  - name: http
    protocol: TCP
    port: 9080
    targetPort: 9080
  # - name: https
  #   port: 8883
  #   targetPort: 8883
  # type: LoadBalancer
  type: ClusterIP
