code/apps/msp-manage/base/manage-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: msp-manage-stripprefix
  namespace: msp
  # labels:
  #   app: msp-manage
spec:
  stripPrefix:
    prefixes:
      - /envds/manage
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msp-manage-ingress
  namespace: msp
  # labels:
  #   app: envds
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares:
      msp-msp-manage-stripprefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /msp/manage
        pathType: Prefix
        backend:
          service:
            name: msp-manage
            port:
              number: 9080
